# libfuckingweather

./: .gitignore  CMakeLists.txt  fuckingweather.c  fuckingweather.h  test_fuckingweather_conditions.c
